--- a/TempratureTest/Views/Shared/_Layout.cshtml
+++ b/TempratureTest/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Testing", "RsvpForm", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Game", "GassingGame", "Home")</li>
                 </ul>
             </div>
         </div>
